@@ -552,7 +552,6 @@ class experiment(item.item):
 		# Unicode sanitized to ASCII format. Again, this is necessary to deal
 		# with poor Unicode support in .tar.gz.
 		tmp_pool = tempfile.mkdtemp(suffix=u'.opensesame.pool')
-		pool_folders.append(tmp_pool)
 		for fname in os.listdir(self.pool_folder):
 			sname = self.usanitize(fname)
 			shutil.copyfile(os.path.join(self.pool_folder, fname),
@@ -563,6 +562,12 @@ class experiment(item.item):
 		shutil.move(tmp_path, path)
 		if update_path:
 			self.experiment_path = os.path.dirname(path)
+		# Clean up the temporary pool folder
+		try:
+			shutil.rmtree(tmp_pool)
+			debug.msg(u'Removed temporary pool folder: %s' % tmp_pool)
+		except:
+			debug.msg(u'Failed to remove temporary pool folder: %s' % tmp_pool)
 		return path
 
 	def open(self, src):
